--- a/1/leaflet study 1.html
+++ b/1/leaflet study 1.html
@@ -4,8 +4,10 @@
 <meta charset="utf-8" />
 <meta http-equiv="content-language" content="zh">
 <title>Leaflet study 1 </title>
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" integrity="sha512-07I2e+7D8p6he1SIM+1twR5TIrhUQn9+I6yjqD53JQjFiMf8EtC93ty0/5vJTZGF8aAocvHYNEDJajGdNx1IsQ==" crossorigin="" />
-<script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet-src.js" integrity="sha512-WXoSHqw/t26DszhdMhOXOkI7qCiv5QWXhH9R7CgvgZMHz1ImlkVQ3uNsiQKu5wwbbxtPzFXd1hK4tzno2VqhpA==" crossorigin=""></script><style>
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css"/>
+<script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet-src.js"></script>
+
+<style>
 html, body  {
 	width: 100%;
 	height: 100%;
@@ -17,14 +19,17 @@ html, body  {
 	height: 100%;
 }
 </style>
+
 </head>
 <body>
 <div id="map"></div>
 <script>
-var map = L.map('map').setView([34.255028, 108.942963], 12);
 
+//设置图层的中心点经纬度和地图放大倍数。[维度，经度]
+var map = L.map('map').setView([34.225028,108.942963], 14); //西安小寨赛格国际
+
+//引入OSM的图层到map对象。
 var mapLink = '<a href="http://openstreetmap.org">OpenStreetMap</a>';
-
 L.tileLayer(
 	'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
 	{
@@ -32,6 +37,7 @@ L.tileLayer(
 		maxZoom: 18
 	}
 ).addTo(map);
+
 </script>
 </body>
 </html>
